--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -1,58 +1,58 @@
-name: Docker Image CI for Main
+name: Docker Image CI for StreamX
 
 on:
- workflow_dispatch:
+workflow_dispatch:
 
 jobs:
- build-and-push:
-   runs-on: ubuntu-latest
-   permissions:
-     contents: read
-     packages: write
-     
-   steps:
-   # Étape 1: Récupération du code source
-   - name: Checkout repository
-     uses: actions/checkout@v4
-     
-   # Étape 2: Configuration de QEMU pour émulation multi-architecture
-   - name: Set up QEMU
-     uses: docker/setup-qemu-action@v3
-     
-   # Étape 3: Configuration de Docker Buildx pour builds multi-plateforme
-   - name: Set up Docker Buildx
-     uses: docker/setup-buildx-action@v3
-     
-   # Étape 4: Connexion au registre de conteneurs GitHub
-   - name: Log in to GitHub Container Registry
-     uses: docker/login-action@v3
-     with:
-       registry: ghcr.io
-       username: ${{ github.repository_owner }}
-       password: ${{ secrets.GITHUB_TOKEN }}
-       
-   # Étape 5: Génération des métadonnées (tags et labels) pour l'image Docker
-   - name: Extract metadata (tags, labels) for Docker
-     id: meta
-     uses: docker/metadata-action@v5
-     with:
-       images: ghcr.io/${{ github.repository }}
-       tags: |
-         type=schedule
-         type=ref,event=branch
-         type=ref,event=pr
-         type=semver,pattern={{version}}
-         type=semver,pattern={{major}}.{{minor}}
-         type=semver,pattern={{major}}
-         type=sha
-         type=raw,value=latest,enable={{is_default_branch}}
-         
-   # Étape 6: Construction et publication de l'image multi-architecture
-   - name: Build and push Docker image
-     uses: docker/build-push-action@v6
-     with:
-       context: .
-       platforms: linux/amd64,linux/arm64
-       push: true
-       tags: ${{ steps.meta.outputs.tags }}
-       labels: ${{ steps.meta.outputs.labels }}
+build-and-push:
+runs-on: ubuntu-latest
+permissions:
+contents: read
+packages: write
+
+steps:
+# Étape 1: Récupération du code source
+- name: Checkout repository
+  uses: actions/checkout@v4
+  
+# Étape 2: Configuration de QEMU pour émulation multi-architecture
+- name: Set up QEMU
+  uses: docker/setup-qemu-action@v3
+  
+# Étape 3: Configuration de Docker Buildx pour builds multi-plateforme
+- name: Set up Docker Buildx
+  uses: docker/setup-buildx-action@v3
+  
+# Étape 4: Connexion au registre de conteneurs GitHub
+- name: Log in to GitHub Container Registry
+  uses: docker/login-action@v3
+  with:
+    registry: ghcr.io
+    username: ${{ github.repository_owner }}
+    password: ${{ secrets.GITHUB_TOKEN }}
+    
+# Étape 5: Génération des métadonnées (tags et labels) pour l'image Docker
+- name: Extract metadata (tags, labels) for Docker
+  id: meta
+  uses: docker/metadata-action@v5
+  with:
+    images: ghcr.io/${{ github.repository }}
+    tags: |
+      type=schedule
+      type=ref,event=branch
+      type=ref,event=pr
+      type=semver,pattern={{version}}
+      type=semver,pattern={{major}}.{{minor}}
+      type=semver,pattern={{major}}
+      type=sha
+      type=raw,value=latest,enable={{is_default_branch}}
+      
+# Étape 6: Construction et publication de l'image multi-architecture
+- name: Build and push Docker image
+  uses: docker/build-push-action@v6
+  with:
+    context: .
+    platforms: linux/amd64,linux/arm64
+    push: true
+    tags: ${{ steps.meta.outputs.tags }}
+    labels: ${{ steps.meta.outputs.labels }}
